advanced-concepts/03_kustomize/base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  name: nginx
  labels:
    openshift-example: true
spec:
  host: nginx-nginx.apps.ocp.lan.stderr.at
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
